[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/sfx/weapon_hit_enemy.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/tiny_zombie/tiny_zombie_idle_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemies/Zombie.gd" type="Script" id=3]
[ext_resource path="res://Assets/tiny_zombie/tiny_zombie_idle_anim_f3.png" type="Texture" id=4]
[ext_resource path="res://Assets/tiny_zombie/tiny_zombie_run_anim_f0.png" type="Texture" id=5]
[ext_resource path="res://Assets/tiny_zombie/tiny_zombie_idle_anim_f1.png" type="Texture" id=6]
[ext_resource path="res://Assets/tiny_zombie/tiny_zombie_run_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://Assets/tiny_zombie/tiny_zombie_run_anim_f1.png" type="Texture" id=8]
[ext_resource path="res://Assets/tiny_zombie/tiny_zombie_idle_anim_f0.png" type="Texture" id=9]
[ext_resource path="res://Assets/tiny_zombie/tiny_zombie_run_anim_f2.png" type="Texture" id=10]
[ext_resource path="res://Assets/health_bar/enemy_health_bar.png" type="Texture" id=11]
[ext_resource path="res://Assets/health_bar/enemy_health_bar_under.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.49426, 4.63471 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
angular_velocity = 6.03
angular_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/blood.png-52df38846705cd7eaf41ed3599ade0df.stex"

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 5, -3, 5, 5, -4, 5, -4, -3 )

[sub_resource type="AudioStreamRandomPitch" id=6]
audio_stream = ExtResource( 1 )
random_pitch = 1.3

[node name="Zombie" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource( 3 )

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 1.5 )
scale = Vector2( 3.0561, 0.9501 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "move"

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
lifetime = 0.7
randomness = 0.5
process_material = SubResource( 3 )
texture = SubResource( 4 )

[node name="DeadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SearchTimer" type="Timer" parent="."]
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 6 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -4.0
margin_top = -6.0
margin_right = 5.0
margin_bottom = -4.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="DeadTimer" to="." method="_on_DeadTimer_timeout"]
[connection signal="timeout" from="SearchTimer" to="." method="_on_SearchTimer_timeout"]
